fixed pics not showing up on mobile

--- a/style.css
+++ b/style.css
@@ -552,8 +552,8 @@ hr {
 
 .box-img {
 	width: 100%;
-	height: 40%;
-	max-height: 300px;
+	min-height: 300px;
+	max-height: 40%;
 	display:flex; 
 	align-content: center;
 	align-items: center;
@@ -563,12 +563,6 @@ hr {
 .box-img:hover {
 	height: 40%;
 	width: 100%;
-}
-
-.box-img img{
-	width: 150%;
-	object-fit: cover;
-	overflow: hidden;
 }
 	
 	#logo-img {
